--- a/index.html
+++ b/index.html
@@ -89,5 +89,24 @@
         
      </div>
     </section>
+    <section>
+        <div>
+        <h5 style="color: red;">THE BEST GIFTS</h5>
+        <h1>Our Awesome Portfolio</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+         </div>
+         <table class="table-img">
+            <td>
+                <tr> <img src="Rectangle 3.png" alt=""></tr>
+                <tr> <img src="Rectangle 4.png" alt=""></tr>
+                <tr> <img src="Rectangle 5.png" alt=""></tr>
+                <tr> <img src="Rectangle 6.png" alt=""></tr>
+                <tr> <img src="Rectangle 7.png" alt=""></tr>
+                <tr> <img src="Rectangle 8.png" alt=""></tr>
+
+            </td>
+        </table>
+    
+    </section>
 </body>
 </html>
